6th HW documentation was added

--- a/docs/5. HF dokumentactio.md
+++ b/docs/5. HF dokumentactio.md
@@ -16,23 +16,23 @@ Ez az uj funkcionalitas nem kapott automata test-eket, mert meg csak baratkozom 
 Mar elozoleg futattam a szervert es train-eltem vele. 
 Igy a mar meglevo stagin model betoltodik server inditaskor.
 Erre hivja fel a figyelmet az INFO logline (amelyik nem a servertol jon annotaciokkal, hanem az INFO a sor legeljen talalhato).
-![server startup](./images/server_up.png)
+![server startup](./images/HF5/server_up.png)
 
 Az MLFlow UI-on gyozodjunk meg rola, hogy valoban letezik mar az INFO logline altal emlitett model (`wineyard_bin_clf_20251106_121233`), es az valoban a legujabb staging modellunk!
-![old model is present in mlflow](./images/server_up_mlflow.png)
+![old model is present in mlflow](./images/HF5/server_up_mlflow.png)
 
 Implementaltam egy uj API endpointot annak erdekeben, hogy a mindenkor az API altal kiszolgalt ml model neve lekerdezhetove valjek. 
 Hasznaljuk ezt, annak erdekeben, hogy double-checkoljuk, hogy a regi model betoltodott-e!
-![model name endpoint](./images/server_up_swagger.png)
+![model name endpoint](./images/HF5/server_up_swagger.png)
 
 A puding probaja az eves, hasznaljuk ezt a regi modelt predikciora!
-![predict with the old model](./images/old_model_predict.png)
+![predict with the old model](./images/HF5/old_model_predict.png)
 
 Vegul gyozodjunk meg arrol, hogy:
 1. az API-nk nem romlott el. Uj model meg mindig train-elhetom
-![train new model](./images/new_model_train.png)
+![train new model](./images/HF5/new_model_train.png)
 2. es ez az uj model megjelenik az MLFlow UI-on a megfelelo taggel!
-![new model on mlflow ui](./images/new_model_in_mlflow.png)
+![new model on mlflow ui](./images/HF5/new_model_in_mlflow.png)
 
 
 ### Megjegyzesek
